chore(Api): workaround for union types
